# git_labs

./: .gitignore  CMakeLists.txt  code.c  functions.c  main.c
DM/lab0/: 1.c  10.c  11.c  12.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
DM/lab1_1/: CMakeLists.txt  lab1_1.c  lab1_1.h
OP/lab10/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  18.c  2.c  20.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
OP/lab11/: 1.c  10.c  11.c  12.c  13.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
OP/lab12/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  def.c
OP/lab13/: CMakeLists.txt  lab13.c  lab13.h
OP/lab20/: lab20.c  lab20.h
OP/lab4/: 19.c
OP/lab5/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  24.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
OP/lab6/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
OP/lab7/: 1.c  10.c  11.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
OP/lab8/: 1.c
OP/lab9/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h  ordered_array_set.c  ordered_array_set.h  unordered_array_set.c  unordered_array_set.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/files/: files.c  files.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
