cmake_minimum_required(VERSION 3.26)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_executable(project main.c
        libs/algorithms/array/array.c
        libs/algorithms/array/array.h
        libs/algorithms/algorithm.c
        libs/algorithms/algorithm.h
        libs/data_structures/bitset/bitset.c
        libs/data_structures/bitset/bitset.h
        OP/lab13/lab13.h
        OP/lab13/lab13.c
        DM/lab1_1/lab1_1.c
        DM/lab1_1/lab1_1.h
        DM/lab1_3/lab1_3.c
        DM/lab1_3/lab1_3.h
        DM/lab1_4/lab1_4.c
        DM/lab1_4/lab1_4.h)

add_subdirectory(libs)
target_link_libraries(project data_structures)
target_link_libraries(project algorithms)

add_library(untitled
        OP/lab4/19.c
        OP/lab5/1.c
        OP/lab5/2.c
        OP/lab5/3.c
        OP/lab5/4.c
        OP/lab5/5.c
        OP/lab5/6.c
        OP/lab5/7.c
        OP/lab5/8.c
        OP/lab5/9.c
        OP/lab5/10.c
        OP/lab5/11.c
        OP/lab5/12.c
        OP/lab5/13.c
        OP/lab5/14.c
        OP/lab5/15.c
        OP/lab5/16.c
        OP/lab5/17.c
        OP/lab5/18.c
        OP/lab5/19.c
        OP/lab5/20.c
        OP/lab5/21.c
        OP/lab5/22.c
        OP/lab5/23.c
        OP/lab5/24.c
        OP/lab6/1.c
        OP/lab6/2.c
        OP/lab6/3.c
        OP/lab6/1.c
        OP/lab6/4.c
        OP/lab6/5.c
        OP/lab6/6.c
        OP/lab6/7.c
        OP/lab6/8.c
        OP/lab6/9.c
        OP/lab6/10.c
        OP/lab6/12.c
        OP/lab6/13.c
        OP/lab6/14.c
        OP/lab6/15.c
        OP/lab6/11.c
        OP/lab7/1.c
        OP/lab7/2.c
        OP/lab7/3.c
        OP/lab7/5.c
        OP/lab7/6.c
        OP/lab7/4.c
        OP/lab7/7.c
        OP/lab7/8.c
        OP/lab7/9.c
        OP/lab7/10.c
        OP/lab7/11.c
        OP/lab8/1.c
        OP/lab9/1.c
        OP/lab9/2.c
        OP/lab9/3.c
        OP/lab9/4.c
        OP/lab9/5.c
        OP/lab9/6.c
        OP/lab9/7.c
        OP/lab9/8.c
        OP/lab9/10.c
        OP/lab9/9.c
        OP/lab10/1.c
        OP/lab10/2.c
        OP/lab10/3.c
        OP/lab10/4.c
        OP/lab10/5.c
        OP/lab10/6.c
        OP/lab10/8.c
        OP/lab10/7.c
        OP/lab10/9.c
        OP/lab10/10.c
        OP/lab10/11.c
        OP/lab10/12.c
        OP/lab10/13.c
        functions.c
        OP/lab10/14.c
        OP/lab10/15.c
        OP/lab10/16.c
        OP/lab10/18.c
        OP/lab10/20.c
        OP/lab11/1.c
        OP/lab11/2.c
        OP/lab11/3.c
        OP/lab11/4.c
        OP/lab11/5.c
        OP/lab11/6.c
        OP/lab11/7.c
        OP/lab11/8.c
        OP/lab11/9.c
        OP/lab11/10.c
        OP/lab11/11.c
        OP/lab11/12.c
        OP/lab11/13.c
        OP/lab12/1.c
        OP/lab12/2.c
        OP/lab12/3.c
        OP/lab12/4.c
        OP/lab12/5.c
        OP/lab12/6.c
        OP/lab12/7.c
        OP/lab12/def.c
        "DM/lab0/1.c"
        "DM/lab0/2.c"
        "DM/lab0/3.c"
        "DM/lab0/4.c"
        "DM/lab0/5.c"
        "DM/lab0/6.c"
        "DM/lab0/7.c"
        "DM/lab0/8.c"
        "DM/lab0/9.c"
        "DM/lab0/10.c"
        "DM/lab0/11.c"
        "DM/lab0/12.c"
        main.c
        code.c
)
